Show correct dates | Better readability on stream detail screen

--- a/src/App.less
+++ b/src/App.less
@@ -1491,8 +1491,8 @@ em {
       }
       .stream-type-indicator {
         position: absolute;
-        top: 8rem;
-        right: 12%;
+        top: 3rem;
+        right: 6%;
         z-index: 1;
         .mean-svg-icons {
           width: 7.5rem;
@@ -1632,7 +1632,7 @@ em {
 /* Stream details */
 .stream-details-container {
   .info-label {
-    font-size: 10px;
+    font-size: 0.8rem;
     font-weight: 400;
     color: var(--color-secondary-alpha-50);
     margin-bottom: 4px;
@@ -1643,8 +1643,8 @@ em {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    font-size: 16px;
-    color: var(--color-secondary-alpha-60);
+    font-size: 1.1rem;
+    color: var(--color-secondary);
     .info-icon {
       flex: 0 0 auto;
       width: 34px;
@@ -1654,7 +1654,8 @@ em {
     .info-data {
       flex: 1 1 auto;
       &.large {
-        font-size: 30px;
+        font-size: 1.5rem;
+        color: var(--color-black);
       }
     }
   }
